--- a/app/src/main/res/layout/activity_touch_pad.xml
+++ b/app/src/main/res/layout/activity_touch_pad.xml
@@ -28,4 +28,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtIP" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="103dp"
+        tools:layout_editor_absoluteY="172dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
