--- a/app/src/main/res/layout/activity_touch_pad.xml
+++ b/app/src/main/res/layout/activity_touch_pad.xml
@@ -1,39 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_touchpad"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TouchPad"
-    android:id="@+id/layout_touchpad">
+    android:orientation="vertical"
+    tools:context=".TouchPad">
 
-    <TextView
-        android:id="@+id/txtIP"
-        android:layout_width="61dp"
-        android:layout_height="17dp"
-        android:layout_marginTop="128dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/touchpad"
+        android:layout_width="match_parent"
+        android:layout_height="500dp">
 
-    <TextView
-        android:id="@+id/txtPort"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtIP" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="103dp"
-        tools:layout_editor_absoluteY="172dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/btnLeft"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:shadowColor="@color/purple_500"
+            app:rippleColor="@color/black"
+            app:strokeColor="@color/teal_700" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/wheel"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Button
+            android:id="@+id/btnRight"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/white"
+            android:shadowColor="@color/teal_200"
+            app:rippleColor="@color/black"
+            app:strokeColor="@color/teal_700" />
+    </LinearLayout>
+
+</LinearLayout>
