#2 updated UI for enter IP

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,48 +8,52 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-
     <EditText
         android:id="@+id/mainTxtIP"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginLeft="30dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="200dp"
-        android:layout_marginRight="30dp"
-        android:background="@drawable/custom_input"
+        android:layout_marginEnd="25dp"
         android:drawableStart="@drawable/ic_ip"
+        android:drawablePadding="5dp"
         android:ems="10"
-        android:drawablePadding="12dp"
+        android:hint="@string/enterIp"
         android:paddingStart="12dp"
         android:paddingEnd="12dp"
-        android:hint="Enter IP of Destination"
-        android:inputType="textPersonName" />
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no"
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/mainNumPort"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="30dp"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        android:background="@drawable/custom_input"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="25dp"
         android:drawableStart="@drawable/ic_port"
         android:drawablePadding="12dp"
         android:ems="10"
-        android:hint="Enter Port of Destination Server"
+        android:hint="@string/enterPort"
         android:inputType="number"
-        android:minHeight="48dp" />
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mainTxtIP" />
 
     <Button
         android:id="@+id/btnConnect"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:text="Connect" />
-</LinearLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="75dp"
+        android:layout_marginTop="50dp"
+        android:text="Connect"
+        android:textSize="20sp"
+        android:background="#000000"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mainNumPort" />
+</androidx.constraintlayout.widget.ConstraintLayout>
