#2 updated UI for enter Port

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,6 @@
         android:drawablePadding="5dp"
         android:ems="10"
         android:hint="@string/enterIp"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,12 +29,12 @@
     <EditText
         android:id="@+id/mainNumPort"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="25dp"
         android:drawableStart="@drawable/ic_port"
-        android:drawablePadding="12dp"
+        android:drawablePadding="5dp"
         android:ems="10"
         android:hint="@string/enterPort"
         android:inputType="number"
@@ -50,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="75dp"
         android:layout_marginTop="50dp"
-        android:text="Connect"
+        android:text="@string/btnConnect"
         android:textSize="20sp"
         android:background="#000000"
         app:layout_constraintEnd_toEndOf="parent"
