#2 updated UI for connect page

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,10 @@
         android:layout_marginTop="200dp"
         android:layout_marginEnd="25dp"
         android:drawableStart="@drawable/ic_ip"
-        android:drawablePadding="5dp"
+        android:drawablePadding="10dp"
         android:ems="10"
+        android:textSize="20sp"
         android:hint="@string/enterIp"
-        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,11 +34,11 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="25dp"
         android:drawableStart="@drawable/ic_port"
-        android:drawablePadding="5dp"
+        android:drawablePadding="10dp"
         android:ems="10"
+        android:textSize="20sp"
         android:hint="@string/enterPort"
         android:inputType="number"
-        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mainTxtIP"
@@ -47,11 +47,12 @@
     <Button
         android:id="@+id/btnConnect"
         android:layout_width="wrap_content"
-        android:layout_height="75dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:text="@string/btnConnect"
         android:textSize="20sp"
-        android:background="#000000"
+        android:padding="10dp"
+        android:backgroundTint="@color/teal_700"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mainNumPort" />
