--- a/app/src/main/res/layout/activity_touch_pad.xml
+++ b/app/src/main/res/layout/activity_touch_pad.xml
@@ -13,6 +13,15 @@
         android:layout_width="match_parent"
         android:layout_height="500dp">
 
+        <TextView
+            android:id="@+id/txt_ip_port"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/waiting"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
@@ -25,10 +34,9 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/white"
-            android:shadowColor="@color/purple_500"
-            app:rippleColor="@color/black"
-            app:strokeColor="@color/teal_700" />
+            android:backgroundTint="@color/black"
+            android:background="@color/black"
+            android:text="" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/wheel"
@@ -44,9 +52,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/white"
-            android:shadowColor="@color/teal_200"
-            app:rippleColor="@color/black"
-            app:strokeColor="@color/teal_700" />
+            android:text=""/>
     </LinearLayout>
 
 </LinearLayout>
