--- a/app/src/main/res/layout/activity_touch_pad.xml
+++ b/app/src/main/res/layout/activity_touch_pad.xml
@@ -27,6 +27,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/primary_dark"
         android:orientation="horizontal">
 
         <Button
@@ -34,8 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:backgroundTint="@color/black"
-            android:background="@color/black"
+            android:textColor="@color/white"
+            android:background="colorSecondary"
             android:text="@string/leftBtn" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -43,7 +44,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/teal_700">
+            android:background="@color/primary">
 
             <TextView
                 android:id="@+id/textView4"
@@ -129,7 +130,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:textColor="@color/white"
+            android:background="colorSecondary"
             android:text="@string/rightBtn"/>
     </LinearLayout>
 </LinearLayout>
