--- a/app/src/main/res/drawable/custom_input.xml
+++ b/app/src/main/res/drawable/custom_input.xml
@@ -5,14 +5,14 @@
           <shape android:shape="rectangle">
               <solid android:color="@color/white" />
               <corners android:radius="10dp" />
-              <stroke android:color="@color/purple_200" android:width="1dp"/>
+              <stroke android:color="@color/primary_dark" android:width="1dp"/>
           </shape>
       </item>
     <item android:state_enabled="true"  >
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
             <corners android:radius="10dp" />
-            <stroke android:color="@color/teal_700" android:width="1dp"/>
+            <stroke android:color="@color/primary_dark" android:width="1dp"/>
         </shape>
     </item>
 </selector>
