#10 updated main UI

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,12 +11,12 @@
         android:id="@+id/imgBtn_Wifi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
-        android:background="@color/white"
+        android:layout_marginTop="100dp"
+        android:background="@color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_wifi_enable"
+        app:srcCompat="@drawable/ic_baseline_wifi"
         tools:ignore="ContentDescription" />
 
     <EditText
@@ -24,26 +24,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="50dp"
         android:layout_marginEnd="25dp"
+        android:layout_marginBottom="100dp"
+        android:autofillHints="false"
+        android:backgroundTint="@color/primary"
         android:ems="10"
-        android:paddingStart="10dp"
         android:hint="@string/enter_manual_ip"
         android:inputType="textPersonName"
-        android:backgroundTint="@color/primary"
+        android:paddingStart="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgBtn_Wifi"
-        android:autofillHints="false"
         tools:ignore="RtlSymmetry" />
 
     <ImageButton
         android:id="@+id/imgBtn_ManualIP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
+        android:layout_marginBottom="107dp"
         android:background="@drawable/enter_ip_btn"
         android:paddingStart="10dp"
         android:paddingTop="5dp"
@@ -51,8 +50,6 @@
         android:paddingBottom="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgBtn_Wifi"
-        app:layout_constraintVertical_bias="0.494"
         app:srcCompat="@drawable/ic_baseline_double_arrow_24"
         tools:ignore="ContentDescription" />
 
