--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="primary">#FF03DAC5</color>
     <color name="primary_dark">#FF018786</color>
+
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFF</color>
+    <color name="white">#FFFFFFFF</color>
     <color name="grey">#7A7676</color>
+    <color name="transparent">#00000000</color>
 </resources>
