#10 helper files and manual input

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,8 +29,9 @@
         android:autofillHints="false"
         android:backgroundTint="@color/primary"
         android:ems="10"
-        android:hint="@string/enter_manual_ip"
-        android:inputType="textPersonName"
+        android:fontFamily="@font/cabin"
+        android:hint="@string/IPinput"
+        android:inputType="text"
         android:paddingStart="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
