--- a/app/src/main/res/layout/activity_touch_pad.xml
+++ b/app/src/main/res/layout/activity_touch_pad.xml
@@ -17,16 +17,18 @@
             android:id="@+id/txt_ip_port"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="10dp"
             android:text="@string/waiting"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:backgroundTint="@color/primary_dark"
+        android:background="@color/primary_dark"
         android:orientation="horizontal">
 
         <Button
@@ -34,14 +36,15 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:backgroundTint="@color/black"
-            android:background="@color/black"
+            android:textColor="@color/white"
+            android:background="@color/primary_dark"
             android:text="@string/leftBtn" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/wheel"
-            android:layout_width="100dp"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:background="@color/primary"
             android:layout_weight="1">
 
             <TextView
@@ -114,12 +117,13 @@
                 android:id="@+id/textView16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="50dp"
+                android:layout_marginTop="5dp"
+                android:gravity="center_horizontal"
                 android:text="@string/wheelString"
                 android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
@@ -127,7 +131,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="@color/white"
+            android:textColor="@color/white"
+            android:background="@color/primary_dark"
             android:text="@string/rightBtn"/>
     </LinearLayout>
 </LinearLayout>
